Added another stylesheet.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="default.css" />
+    <link rel="stylesheet" href="css/default.css" />
 </head>
 <body>
     <div id="wrap">
         <header>
-            <h1>Snazzy Title</h1>
-            <h2 id="tagline">a template i made once</h2>
+            <h1>Columns Classic</h1>
+            <h2>a simple html template</h2>
             <nav>
                 <ul>
                     <li><a href="#">Menu Item</a></li>
